# JniLibWallet

./: local.properties  test.jks
app/: CMakeLists.txt  CMakeLists_1.txt  CMakeLists_SecLink.txt  build.gradle
app/src/androidTest/java/com/iyich/wallet/lib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_iyich_wallet_lib_jni_FastModeJNI.cpp  com_iyich_wallet_lib_jni_FastModeJNI.h  com_iyich_wallet_lib_jni_SecLinkJni.h  fastmode.c  fastmode.h  native-lib.cpp  package_type.h  seclink.c  test.cpp
app/src/main/cpp/bleProtocol/: com_iyich_wallet_lib_jni_FastModeJNI.h  fastmode.c  fastmode.h
app/src/main/cpp/sec/: ecdsa.c  ecdsa.h  pbkdf2.c  pbkdf2.h  secp256k1.h
app/src/main/cpp/sec/sing/: bip32.c  bip32.h  hmac.c  hmac.h  nist256p1.h  rand.c  rfc6979.c  rfc6979.h  sha2.c  sha2.h
app/src/main/cpp/sec/sing/aes/: aeskey.c
app/src/main/cpp/sec/sing/ed25519-donna/: curve25519-donna-32bit.c
app/src/main/cpp/sec/sing/ed25519-old/: curve25519-donna-helpers.h  curve25519-donna-scalarmult-base.h  ed25519-donna-portable.h  modm-donna-32bit.h
app/src/main/java/Format/: BaseFastmode.java  FastMode.java  FastModeCallback.java  PackData.java  PackageType.java
app/src/main/java/com/iyich/wallet/lib/: Callback.java  Convert.java  FastModeCallback.java  JniApplication.java  MainActivity.java  test.java
app/src/main/java/com/iyich/wallet/lib/jni/: FastModeJNI.java  GwJniHelp.java  SecLinkJni.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/iyich/wallet/lib/: ExampleUnitTest.java
